# Blockchain

BlockchainSimulator/: TransaccionesNodos.py  nodes.json  tarea1.py  test2.py  test3.py  transaction.json  trx1.py  trx2.py  trx3.py  trx4.py
Cairo/starknet_messaging_bridge/: readme.md
ChallengesCTF/: README.MD
ChallengesCTF/A-maze-x/: README.MD
ChallengesCTF/DVDF_Foundry/: readme.md
Flashbots/: Flashbot2
Flashbots/Flashbot1/: Flashbot.sol
Frontrunning/: hack.sol  victim.sol
MyDAO/: .env  package-lock.json  package.json  readme.md
MyDAO/public/: index.html
MyDAO/scripts/: 1-initialize-sdk.js  10-create-vote-proposals.js  11-revoke-roles.js  2-deploy-drop.js  3-config-nft.js  4-set-claim-condition.js  5-deploy-token.js  6-print-money.js  7-airdrop-token.js  8-deploy-vote.js  9-setup-vote.js
MyDAO/src/: App.jsx  index.css
MyNFT/: deploy.js  jpnft.sol  jptest.js
MyToken/: JPToken.js  JPToken.sol  deploy.js
Oracle-Chainlink/: GetRandomNumber.sol  GetTradePrice.sol
Solana/nftdrop/: README.md  config.json  package-lock.json
Solana/solana-bam/src/program/: Cargo.toml
Solana/solana-bam/src/program/src/: lib.rs
Solana/solana-basicas/: hola.rs  program-vars  program-vars.rs
SolidityBasics/: 01_LibroVisita.sol  02_Token_NoERC20.sol  03_NotasInstituto.sol  10_2_TokenNoFungible.sol  10_TokenFungible.sol  11_1_nft.sol  11_Ahorro.sol  8_NumeroSecreto.sol  BancoBasico.sol
SolidityBasics/Call/: 08_1_LlamadorCall.sol  08_Cobrador.sol  1TareaLlama_Call.sol  1TransferirMetodos.sol  1_TareaCall.sol  TareaCall.sol  TareaLlamaCall.sol
(+175 files in other folders)
