[package]
name = "solana-bam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program="1.14.7"

[dev_dependencies]
solana-program-test="1.14.7"
solana-sdk="1.14.7"

[lib]
crate-type=["cdylib","lib"]

